force-app/main/default/objects/WhatsApp_Notification_Log__c/WhatsApp_Notification_Log__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Notification Log</label>
    <nameField>
        <displayFormat>WA-{00000}</displayFormat>
        <label>WhatsApp Notification Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhtasApp Notifications Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>