force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Father__c.field-meta.xml
<CustomField>
    <fullName>Father__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Father</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WhtasApp Notifications Logs (Contact)</relationshipLabel>
    <relationshipName>WhtasApp_Notifications_Logs1</relationshipName>
    <type>Lookup</type>
</CustomField>