force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Father_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Father_Mobile__c</fullName>
    <label>Father Mobile</label>
    <type>Phone</type>
</CustomField>