force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Father_Msg_Id__c.field-meta.xml
<CustomField>
    <fullName>Father_Msg_Id__c</fullName>
    <label>Father Msg Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>