force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Fathers_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Fathers_Status_Code__c</fullName>
    <label>Fathers Status Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>