force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Mother__c.field-meta.xml
<CustomField>
    <fullName>Mother__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mother</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WhtasApp Notifications Logs (Contact)</relationshipLabel>
    <relationshipName>WhtasApp_Notifications_Logs2</relationshipName>
    <type>Lookup</type>
</CustomField>