force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Mother_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Mother_Mobile__c</fullName>
    <label>Mother Mobile</label>
    <type>Phone</type>
</CustomField>