force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Mother_Msg_Id__c.field-meta.xml
<CustomField>
    <fullName>Mother_Msg_Id__c</fullName>
    <label>Mother Msg Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>