force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Mothers_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Mothers_Status_Code__c</fullName>
    <label>Mothers Status Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>