force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Notification_Sent_on__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sent_on__c</fullName>
    <label>Notification Sent on</label>
    <type>DateTime</type>
</CustomField>