force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Old_Records__c.field-meta.xml
<CustomField>
    <fullName>Old_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Records</label>
    <type>Checkbox</type>
</CustomField>