force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>Program_Batch__c</fullName>
    <label>Program Batch</label>
    <length>250</length>
    <type>Text</type>
</CustomField>