force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WhtasApp Notifications Logs</relationshipLabel>
    <relationshipName>WhtasApp_Notifications_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>