force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Student_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Student_Mobile__c</fullName>
    <label>Student Mobile</label>
    <type>Phone</type>
</CustomField>