force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Student_Msg_Id__c.field-meta.xml
<CustomField>
    <fullName>Student_Msg_Id__c</fullName>
    <label>Student Msg Id</label>
    <length>250</length>
    <type>Text</type>
</CustomField>