force-app/main/default/objects/WhatsApp_Notification_Log__c/fields/Student_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Student_Status_Code__c</fullName>
    <label>Student Status Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>